# disco_express

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  todo.md
assets/: config.toml
assets/data/: charts.csv  classics.csv  current_charts.csv  slurs.txt
assets/styles/: stylesheet.qss
commands/: autostart_disable.sh  autostart_enable.sh  kill.sh  reset.sh
disco_express/: log.py
disco_express/config/: __init__.py  models.py
disco_express/controllers/: __init__.py  controller.py  home_controller.py  info_controller.py  main_controller.py  music_wish_controller.py
disco_express/models/: charts_manager.py  jukebox_client.py
disco_express/views/: __init__.py  helpers.py  home_view.py  info_view.py  main_view.py  music_wish_view.py  quick_selection_view.py  screensaver.py  view.py  widgets.py
docs/: build_pi_image.md
jukebox_client/: log.py
jukebox_client/config/: __init__.py  config.toml  models.py  slurs_german.txt
jukebox_client/controllers/: __init__.py  controller.py  home_controller.py  info_controller.py  main_controller.py  music_wish_controller.py
jukebox_client/models/: __init__.py  charts_manager.py  jukebox_client.py
jukebox_client/views/: __init__.py  document_view.py  helpers.py  home_view.py  info_view.py  main_view.py  music_wish_view.py  quick_selection_view.py  view.py  widgets.py
