[tool.poetry]
name = "jukebox-client"
version = "1.0.0"
description = "GUI for submitting music wishes"
authors = ["Nico Päller <n.p.98@hotmail.de>"]
license = "GPL v3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.6.1"
requests = "^2.31.0"
pydantic = "^2.7.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
